# qwen3-tts-apple-silicon

./: README.md  cli.py  main.py  pyproject.toml  requirements.txt
