[project]
name = "qwen3-tts-apple-silicon"
version = "0.1.0"
description = "Qwen3 TTS on Apple Silicon via MLX"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@9349644ccbd62eb10900852228f7b952c566def3",
    "mlx-lm==0.30.5",
    "mlx==0.30.3",
    "mlx-metal==0.30.3",
    "transformers==5.0.0rc3",
    "tokenizers==0.22.2",
    "sentencepiece==0.2.1",
    "tiktoken==0.12.0",
    "huggingface_hub==1.3.4",
    "safetensors==0.7.0",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "sounddevice==0.5.3",
    "miniaudio==1.61",
    "pyloudnorm==0.2.0",
    "audioread==3.1.0",
    "numpy==2.3.5",
    "scipy==1.17.0",
    "scikit-learn==1.8.0",
    "numba==0.63.1",
    "typer-slim==0.21.1",
    "click==8.3.1",
    "PyYAML==6.0.3",
    "requests==2.32.5",
]
